2002-09-23  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b9

	* Changed the captionator to only require canChangeTextOfAlbum
	  permissions (used to require canWrite).

2002-09-18  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b8

	* Fixed a bug in the ImageMagick code where it was rotating images the
	  wrong direction.

2002-09-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b7

	* Added setup/check_imagemagick.php (forgot to do it as part of -b6)

2002-09-14  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b6

	* Gallery now supports ImageMagick, thanks to a patch from Vallimar!

2002-09-10  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b5

	* Converted from short php tags to long php tags, thanks to a very
	  large patch from Chris Ricker <kaboom@gatech.edu>

2002-09-04  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b4

	* Added <html> and <head> tags where appropriate to make Gallery more
	  compliant.

2002-08-23  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b3

	* Changed the Album's mkdir() call to use perms of 775.  This fixes the
	  problem where the albums directory has the user sticky bit set (which
	  some ISPs like to do).  Thanks to Alexey Ovcharov and Pavel for this
	  fix

2002-08-22  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b2

	* Tweaked setup/check_netpbm.php so that it works better on Windows.

2002-08-12  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b1

	* Added a few more default search paths for NetPBM and jhead in the
	  config wizard

	* Fixed a bug in the config wizard where we were overriding Options
	  in .htaccess (thanks Karl Narveson)

================================================================================
v1.3.1 release
================================================================================

2002-08-01  Bharat Mediratta  <bharat@menalto.com> 1.3.1-cvs-b13

	* Fixed similar SECURITY HOLE in captionator.php (how did I miss this
	  before?).
