@@ -23,3 +23,5 @@ Ken Frank		<kffrank@mn.mediaone.net>
 Markus Illenseer	<markus@core.de>
 Matthew McEachen	<mceachen@users.sourceforge.net>
 Rob Lingle		<rob@rel3.net>
+Sammy Spets		<sammys@cse.unsw.edu.au>
+
