@@ -1,10 +1,9 @@
 CONTENTS
  1. How to upgrade Gallery
  2. How to upgrade a modified Gallery
- 3. Upgrading from pre-v1.1 to v1.1
- 4. Upgrading from v1.1 to v1.2
- 5. Upgrading from v1.2.2
- 6. Upgrading from v1.2.3, v1.2.4, v1.2.5 or v1.3.x
+ 3. Upgrading from v1.1 (or earlier)
+ 4. Upgrading from v1.2.x
+ 5. Upgrading from v1.3, v1.3.1
 
 1. HOW TO UPGRADE GALLERY
 
@@ -12,7 +11,8 @@ In general, upgrading is very easy.  You won't lose any data, you
 won't have to rebuild your albums.  If you're running an unmodified
 (ie, you haven't changed the code -- changing html_wrap files don't
 count), relatively recent version of Gallery then the upgrade process
-will take all of about a minute.
+will take all of about a minute.  All your html_wrap/ and css/ changes
+will be preserved.
 
    1. Make a backup of your old Gallery installation
    2. Put your Gallery in config mode (ie, 'sh configure.sh')
@@ -29,7 +29,15 @@ If a significant enough change has happened to Gallery, it will force
 you to go back to config mode and run through the config wizard again,
 but it will save all your old settings so that should be pretty easy.
 
-All your html_wrap/ and css/ changes will be preserved.
+Once you've got the new code and have run the config wizard, you may
+be required to let Gallery upgrade all your albums.  This is only
+required if we've changed the Album data format (which we do rarely).
+If you click on an album that requires upgrading, Gallery will
+automatically upgrade it for you right away.  Or, you can log on as
+administrator and on the main Gallery page you'll see a link next to
+every album that requires upgrading.  Click that to get into the
+interface where you can upgrade all albums at once (or just browse
+to upgrade_album.php).  
 
 2. HOW TO UPGRADE A MODIFIED GALLERY
 
@@ -74,18 +82,17 @@ along with a description of what it does so that we can take a look at
 it?  We don't want your work to go to waste and we want to make it
 easy for you to keep upgrading Gallery.
 
-3. UPGRADING FROM PRE-v1.1
+3. UPGRADING FROM V1.1 (OR EARLIER)
 
-If you've modified files in the html_wrap/ directory, you may
-experience some problems when you upgrade to v1.1.  We've moved some
-of the variables around since we were finding that there were some
-conflicts in the global namespace.  All global and session variables
-can now be found in the $gallery object.  Take a look at the tips in
-the html_wrap/xxx.default files to see what the new variable names
-are.  
+Many changes have gone into the codebase since v1.1.  The upgrade
+process *should* work smoothly, unless you've modified the code.  
+We've changed the Album data format, and the config file data
+format so you'll be required to re-run the config wizard, then
+perform an upgrade on all your albums afterwards.  Do not be
+dismayed -- this is easy!  See section 1 for details.
 
   HTML_WRAP CHANGES
- 
+
 PHP-Nuke 5.0 integration is new in v1.1 and in order to make Gallery a
 seamless Nuke 5.0 module, we had to make some changes to the
 html_wrap/ default files.  If you look at the new
@@ -116,66 +123,32 @@ gallery_style.css file, you'll need to pull the relevant changes out
 of your gallery_style.css and put them into either embedded_style
 or standalone_style, as appropriate. 
 
-4. UPGRADING FROM v1.1
+  NUKE/POSTNUKE CHANGES
 
-In v1.2 we've changed the structure of the albums files slightly.  This
-means that you can't have a v1.1 and v1.2 gallery pointing at the same
-albums.  The first time you look at an album with v1.2 it will run
-through an upgrade process which will modify the album to make it work
-with v1.2.
-
-As an admin, there's a link available on the top level to upgrade
-many albums at once.  If for some reason you can't find that link,
-then you can go directly to the upgrade_album.php page.  
-
-There are no known complications in upgrading from v1.1 to v1.2.
-Remember that the default html_wrap and css files can change across
-versions (for example, we introduced a new <table> tag into
-photo.header.default) so you'll want to to audit your html_wrap files
-after the upgrade is complete.
-
-5. UPGRADING FROM v1.2
-
-We made a change in the Nuke support in v1.2.2.  In the past, if you
-wanted to rename your Gallery module under Nuke, you had to modify the
-$GALLERY_MODULENAME variable in gallery/index.php.  In v1.2.2, we
-detect the name of the module and use it automatically.  So, when you
+We made a change in the Nuke support.  In v1.1, if you wanted to
+rename your Gallery module under Nuke modules directory, you had to
+modify the $GALLERY_MODULENAME variable in gallery/index.php.  Now, we
+detect the name of the module and use it automatically.  When you
 upgrade you won't need to modify index.php any more.
 
-Also, when you upgrade to v1.2.2 you'll have to re-run the config
-wizard and then upgrade all of your albums.  The first time an album
-is viewed, it'll be automatically upgraded.  It can be tedious to have
-to click to every single album as part of the upgrade process.
-However, it's possible to upgrade all your albums at once!  Log on as
-the admin user and then on the main page you'll see a link (in red)
-next to every album that requires an upgrade.  Click this link and it
-will take you to the "upgrade_album.php" page which will allow you to
-upgrade any individual album, or all albums at once.  If you can't
-find the link, you can browse to this page directly by entering it
-into your browser manually.
+4. UPGRADING FROM v1.2.x
 
-6. UPGRADING FROM v1.2.2
+We changed the album and config data versions so you'll have to run
+through the album upgrade process (see SECTION 1).  
 
-Due to a security fix, you now have to modify index.php if you want
-to use the Gallery random photo block for Nuke.  After upgrading, if
-you're using this block, instead of seeing the actual photo you'll
-now see a message like this:
+If you're using the random block, we now put "block-random.php"
+in the $safe_to_include array in index.php for you; you no longer
+need to edit this file anymore.
 
-	Security error!  The file you tried to include
-	is not on the approved file list.  To include
-	this file you must edit Gallery's index.php
-	and add XXX to the $safe_to_include array
+5. UPGRADING FROM v1.3, v1.3.1
 
-except that instead of XXX above it will specify the file that you're
-trying to include.  You'll need to edit index.php and add this file
-to the list of _approved_ files that can be included.  There are 
-instructions in index.php for doing this.
+We changed the album and config data versions in v1.3.2, so you'll
+have to run through the album upgrade process (see SECTION 1).
 
-7. UPGRADING FROM v1.2.3, v1.2.4, v1.2.5 or v1.3.x
-
-Gallery may tell you that your configuration is out of date and may
-ask you to re-run the config wizard.  Gallery may also want to upgrade
-your albums.  See section 5 for more information about this.
+We also introduced a new "Can View Full Images" permission.  As part
+of the album upgrade process we assign this permission to anybody
+who already had the "Can View Album" permission so it should maintain
+your status quo.
 
 Gallery no longer requires usage of php_short_tags.  If you have
 short_tag support enabled only for Gallery, you can change
