@@ -1,5 +1,9 @@
 2002-09-23  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b9
 
+	* Overhauled the UPGRADING document; it was getting pretty confusing
+
+	* Rolled in Sammy Spets' "can view full images" permission patch
+
 	* Changed the captionator to only require canChangeTextOfAlbum
 	  permissions (used to require canWrite).
 
